--- a/Source/SizeOnDisk/app.config
+++ b/Source/SizeOnDisk/app.config
@@ -1,3 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup></configuration>
+<configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <section name="SizeOnDisk.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+</configSections>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup><userSettings>
+        <SizeOnDisk.Properties.Settings>
+            <setting name="Language" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="UISizeFormat" serializeAs="String">
+                <value>Bytes</value>
+            </setting>
+            <setting name="ApplicationVersion" serializeAs="String">
+                <value />
+            </setting>
+        </SizeOnDisk.Properties.Settings>
+    </userSettings>
+</configuration>
