--- a/Source/SizeOnDisk/Properties/Settings.settings
+++ b/Source/SizeOnDisk/Properties/Settings.settings
@@ -5,8 +5,8 @@
     <Setting Name="Language" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="UISizeFormat" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
+    <Setting Name="UISizeFormat" Type="SizeOnDisk.Converters.UISizeFormatType" Scope="User">
+      <Value Profile="(Default)">Bytes</Value>
     </Setting>
     <Setting Name="ApplicationVersion" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
