--- a/Source/SizeOnDisk/SizeOnDisk.csproj
+++ b/Source/SizeOnDisk/SizeOnDisk.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SizeOnDisk</RootNamespace>
     <AssemblyName>SizeOnDisk</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -110,6 +110,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Xaml">
@@ -121,8 +123,11 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="WindowsFormsIntegration" />
-    <Reference Include="WPFLocalizeExtension">
-      <HintPath>..\References\WPFLocalizeExtension.dll</HintPath>
+    <Reference Include="WPFLocalizeExtension, Version=3.0.1.0, Culture=neutral, PublicKeyToken=da17a8a04a0e3b31, processorArchitecture=MSIL">
+      <HintPath>..\packages\WPFLocalizeExtension.Signed.3.1.2\lib\net35\WPFLocalizeExtension.dll</HintPath>
+    </Reference>
+    <Reference Include="XAMLMarkupExtensions">
+      <HintPath>..\packages\XAMLMarkupExtensions.Signed.1.3.0\lib\net40\XAMLMarkupExtensions.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -158,7 +163,6 @@
     <Compile Include="UI\CreateCommandContext.cs" />
     <Compile Include="UI\Helper.cs" />
     <Compile Include="UI\ICommandContext.cs" />
-    <Compile Include="UI\LocEnumExtension.cs" />
     <Compile Include="UI\LocFlowDirectionExtension2.cs" />
     <Compile Include="UI\MenuItemEx.cs" />
     <Compile Include="UI\RoutedUICommandEx.cs" />
@@ -176,8 +180,10 @@
     <Compile Include="Utilities\IOHelper.cs" />
     <Compile Include="Utilities\WrapperIWin32Window.cs" />
     <Compile Include="ViewModel\NotifyCollection.cs" />
+    <Compile Include="ViewModel\PropertyChangedBase.cs" />
     <Compile Include="ViewModel\TaskExecutionState.cs" />
     <Compile Include="ViewModel\VMFileAttributes.cs" />
+    <Compile Include="ViewModel\VMOptions.cs" />
     <Compile Include="ViewModel\VMRootFolder.cs" />
     <Compile Include="ViewModel\VMRootHierarchy.cs" />
     <Compile Include="ViewModel\VMFile.cs" />
@@ -277,6 +283,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="key.snk" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
