--- a/Source/SizeOnDisk/SizeOnDisk.csproj
+++ b/Source/SizeOnDisk/SizeOnDisk.csproj
@@ -128,10 +128,6 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="WindowsFormsIntegration" />
-    <Reference Include="WPFLocalizeExtension, Version=3.0.1.0, Culture=neutral, PublicKeyToken=da17a8a04a0e3b31, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\References\WPFLocalizeExtension\WPFLocalizeExtension.dll</HintPath>
-    </Reference>
     <Reference Include="XAMLMarkupExtensions, Version=1.2.2.0, Culture=neutral, PublicKeyToken=da17a8a04a0e3b31, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\References\XAMLMarkupExtensions\XAMLMarkupExtensions.dll</HintPath>
@@ -151,8 +147,6 @@
     <Compile Include="Converters\IsRunningConverter.cs" />
     <Compile Include="Converters\SizeConverter.cs" />
     <Compile Include="Converters\UISizeFormatType.cs" />
-    <Compile Include="UI\CommandEx.cs" />
-    <Compile Include="UI\DataGridRollbackOnUnfocusedBehaviour.cs" />
     <Compile Include="Localization.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -166,11 +160,6 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="UI\AutoDisablingImage.cs" />
-    <Compile Include="UI\CommandViewModel.cs" />
-    <Compile Include="UI\CreateCommandContext.cs" />
-    <Compile Include="UI\Helper.cs" />
-    <Compile Include="UI\ICommandContext.cs" />
     <Compile Include="Utilities\ExceptionBox.xaml.cs">
       <DependentUpon>ExceptionBox.xaml</DependentUpon>
     </Compile>
@@ -323,6 +312,16 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Icons\PrintHS.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\WPFByYourCommand\Source\WPFByYourCommand\WPFByYourCommand.csproj">
+      <Project>{89CC2D45-35B2-4C73-8C4C-AD12BB67CF7A}</Project>
+      <Name>WPFByYourCommand</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\WPFLocalizeExtension\WPFLocalizeExtension.csproj">
+      <Project>{97622b9a-d365-43c5-9d96-08b130ca391c}</Project>
+      <Name>WPFLocalizeExtension</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
