--- a/Source/SizeOnDisk/packages.config
+++ b/Source/SizeOnDisk/packages.config
@@ -1,9 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AdonisUI" version="1.11.0" targetFramework="net48" />
-  <package id="AdonisUI.ClassicTheme" version="1.11.0" targetFramework="net48" />
-  <package id="ControlzEx" version="3.0.2.4" targetFramework="net48" />
-  <package id="MahApps.Metro" version="1.6.5" targetFramework="net48" />
-  <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net48" />
-  <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net48" />
+  <package id="CommonServiceLocator" version="2.0.2" targetFramework="net48" />
 </packages>
