Fixes, Menu, Localization. Preperation dor a big cleanup. Almost ready for a release

--- a/Source/SizeOnDisk/SizeOnDisk.csproj
+++ b/Source/SizeOnDisk/SizeOnDisk.csproj
@@ -331,6 +331,9 @@
     <Resource Include="Icons\Detail.png" />
     <Resource Include="Icons\List.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\Recycle_Bin_Empty.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
