--- a/Source/SizeOnDisk/SizeOnDisk.csproj
+++ b/Source/SizeOnDisk/SizeOnDisk.csproj
@@ -133,6 +133,10 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="WindowsFormsIntegration" />
+    <Reference Include="WPFLocalizeExtension, Version=3.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\References\WPFLocalizeExtension\WPFLocalizeExtension.dll</HintPath>
+    </Reference>
     <Reference Include="XAMLMarkupExtensions, Version=1.2.2.0, Culture=neutral, PublicKeyToken=da17a8a04a0e3b31, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\References\XAMLMarkupExtensions\XAMLMarkupExtensions.dll</HintPath>
@@ -322,10 +326,6 @@
     <ProjectReference Include="..\..\..\WPFByYourCommand\Source\WPFByYourCommand\WPFByYourCommand.csproj">
       <Project>{89CC2D45-35B2-4C73-8C4C-AD12BB67CF7A}</Project>
       <Name>WPFByYourCommand</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\WPFLocalizeExtension\WPFLocalizeExtension.csproj">
-      <Project>{97622b9a-d365-43c5-9d96-08b130ca391c}</Project>
-      <Name>WPFLocalizeExtension</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
