--- a/.gitignore
+++ b/.gitignore
@@ -344,3 +344,6 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database 
 healthchecksdb
+/SizeOnDisk_2.2.0.0_x64__9gtvz40s89zpm.msix
+/Source/Bootstrapper
+/Source/SetupProject1
