--- a/Source/SizeOnDisk/SizeOnDisk.csproj
+++ b/Source/SizeOnDisk/SizeOnDisk.csproj
@@ -309,9 +309,6 @@
     <Resource Include="Icons\Refresh.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Icons\OptionsHS.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Icons\LegendHS.png" />
   </ItemGroup>
   <ItemGroup>
@@ -337,10 +334,19 @@
     <Resource Include="Icons\List.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Icons\Recycle_Bin_Empty.png" />
+    <Resource Include="DefaultConfiguration.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="DefaultConfiguration.xml" />
+    <Resource Include="Icons\Properties.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\Recycle_Bin.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\Options.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\Help.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
