HKEY ROOT playground + Applications SubKeys + ...

--- a/Source/SizeOnDisk/app.config
+++ b/Source/SizeOnDisk/app.config
@@ -6,13 +6,13 @@
   </configSections>
   <SizeOnDisk>
     <editors>
-      <editor display="Open as text"
+      <editor display="loc:OpenAsText"
               definition="ApplicationKey"
               parameter1="Notepad++.exe"/>
-      <editor display="Open as text"
+      <editor display="loc:OpenAsText"
               definition="ApplicationKey"
               parameter1="TextPad.exe"/>
-      <editor display="Open as text"
+      <editor display="loc:OpenAsText"
               definition="ApplicationKey"
               parameter1="notepad.exe"/>
     </editors>
