--- a/Source/SizeOnDisk/SizeOnDisk.csproj
+++ b/Source/SizeOnDisk/SizeOnDisk.csproj
@@ -355,6 +355,12 @@
   <ItemGroup>
     <Resource Include="Icons\Close.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\Shortcut-small.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\Shortcut-big.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
