Litte visual fix

--- a/.gitignore
+++ b/.gitignore
@@ -347,3 +347,4 @@ healthchecksdb
 /SizeOnDisk_2.2.0.0_x64__9gtvz40s89zpm.msix
 /Source/Bootstrapper
 /Source/SetupProject1
+/Source/SizeOnDiskInstaller
