Temporary version for Threading tests

--- a/Source/SizeOnDisk/SizeOnDisk.csproj
+++ b/Source/SizeOnDisk/SizeOnDisk.csproj
@@ -15,7 +15,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SizeOnDisk</RootNamespace>
     <AssemblyName>SizeOnDisk</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -124,6 +124,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Collections.Immutable, Version=1.2.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Collections.Immutable.1.5.0\lib\netstandard1.3\System.Collections.Immutable.dll</HintPath>
+    </Reference>
     <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -199,6 +202,7 @@
     <Compile Include="ViewModel\DefaultEditorItem.cs" />
     <Compile Include="ViewModel\DefaultEditors.cs" />
     <Compile Include="ViewModel\TaskExecutionState.cs" />
+    <Compile Include="ViewModel\TaskHelper.cs" />
     <Compile Include="ViewModel\VMFileDetails.cs" />
     <Compile Include="ViewModel\VMOptions.cs" />
     <Compile Include="ViewModel\VMRootFolder.cs" />
