--- a/Source/SizeOnDisk/app.config
+++ b/Source/SizeOnDisk/app.config
@@ -17,4 +17,8 @@
               parameter1="notepad.exe"/>
     </editors>
   </SizeOnDisk>
+  <startup>
+    <supportedRuntime version="v4.0"
+                      sku=".NETFramework,Version=v4.6"/>
+  </startup>
 </configuration>
