--- a/Source/SizeOnDisk/packages.config
+++ b/Source/SizeOnDisk/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.CodeQuality.Analyzers" version="2.9.3" targetFramework="net452" />
   <package id="Microsoft.NetCore.Analyzers" version="2.9.3" targetFramework="net452" />
   <package id="Microsoft.NetFramework.Analyzers" version="2.9.3" targetFramework="net452" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net46" />
 </packages>
