--- a/Source/SizeOnDisk/SizeOnDisk.csproj
+++ b/Source/SizeOnDisk/SizeOnDisk.csproj
@@ -398,6 +398,9 @@
     <Resource Include="Icons\UnknownFolderBig.png" />
     <Resource Include="Icons\UnknownFolderSmall.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\Log.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
