--- a/Source/SizeOnDisk/app.config
+++ b/Source/SizeOnDisk/app.config
@@ -2,7 +2,7 @@
 <configuration>
   <configSections>
     <section name="SizeOnDisk"
-             type="SizeOnDisk.MainConfigurationSection, SizeOnDisk"/>
+             type="SizeOnDisk.Configurations.MainConfigurationSection, SizeOnDisk"/>
   </configSections>
   <SizeOnDisk>
     <editors>
